--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,31 @@
 body {
   font-family: "Lato", sans-serif;
+  color: #47a3da;
 }
 
-.outer-button {
+.outer-heading {
   border-style: none;
   background: #fff;
+  font-size: 2.25em;
+  font-weight: 300;
+  border-bottom: .025em solid #ddd;
 }
 
 .hide {
   display: none;
+}
+
+.hide-right-arrow {
+  display: none;
+}
+
+.show-right-arrow {
+  display: inline;
+}
+
+.arrow-container:hover > span {
+  -webkit-transform: rotateZ(45deg);
+          transform: rotateZ(45deg);
 }
 
 .hide-down-arrow {
